--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "y",
+  "name": "huashu",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "tech",
   "author": "fan <bofanyinbing@163.comgit config --global user.email bofanyinbing@163.com>",
   "private": true,
   "scripts": {
