--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.19.2",
     "element-ui": "^2.13.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "postcss-px2rem": "^0.3.0",
+    "postcss-pxtorem": "^5.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.3"
